style.css
* {
  margin: 0;
  padding: 0;
}

html {
  color: #222;
  line-height: 1.4;
  font-size: 16px;
  font-family: 'Lexend', sans-serif;
}

header {
  height: 100px;
  width: 100%;
  background: #e31919;
  position: fixed;
  top: 0;
  z-index: 10;
    
}

nav {
  height: 100%;
  display: flex;
  align-items: center;       
  justify-content: space-between;
  padding: 0 2rem;
}

.logo {
  height: auto;
  width: 50;  
}

nav a{
  color: white;
  text-decoration: none;
  font-weight: 700;
  font-size: 1rem;
  white-space: nowrap;   
}

nav ul {
  display: flex;
  list-style: none;
  gap: 1.5rem; 
}

nav a:hover {
  text-decoration: underline;
  text-decoration-thickness: 0.2em;
  /*font-size: 1.5rem;*/
}

.hero {
  background-image: url("assets/SGheroImg.png"); 
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  height: 100vh;
  padding-top: 5rem;
  /*border-bottom: 10px solid #E04728;*/
 
   
}

.hero h1 {
  display: flex;
  justify-content: center;
  padding-top: 39rem;
  color: white;
  font-size: 5rem;
  text-shadow: 2px 2px 5px #000000;
  line-height: 1.2;      
}

img {
  display: block;
  width: 100%;
  height: auto;
}

.grid.container {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-auto-rows: minmax(240px, auto);
  margin: 50px 30px; 
}

footer {
  width: 100vw;
  height: 150px;
  background: #4a4343;
  
}

footer a {
  display: inline;
  color: white;
  text-decoration: none;
  font-weight: 700;
}

.footer-links {
  width: 400px;
  height: 60px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  flex-wrap: wrap;
  padding-right: 30px;
  padding-top:45px;
  float:right;
}

footer a:hover {
  text-decoration: underline;
  text-decoration-thickness: 0.2em;
  /*font-size: 1.5rem;*/
}

@media only screen and (max-width: 480px) {
  html{
    font-size: 13px;
  }

  .logo {
    padding-left: 1rem;
  }

  nav a {
    padding-right: 2px;
  }

  .hero h1 {
    font-size: 2.5rem;
    padding-top: 15.2rem;
    padding-left: 0.7rem;
    line-height: 1.2;
  }

  .hero {
    background-size: contain;
    background-position: center 100px;
    height: 320px;
  }

  .grid.container {
    display: grid;
    grid-template-columns: 1fr;
    margin: 20px 10px;
    gap: 20px;
  }

  .img1 { grid-row: 1; }
  .text1 { grid-row: 2; }

  .img2 { grid-row: 3; }
  .text2 { grid-row: 4; }

  .img3 { grid-row: 5; }
  .text3 { grid-row: 6; }

  .img4 { grid-row: 7; }
  .text4 { grid-row: 8; }
  
}

